--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
                 flex-wrap: wrap;
                 flex-direction: row;
                 justify-content: space-between;
+                list-style: symbols();
             }
             #lol1, #lol2, #lol3 {
                 background-color: rgb(146, 98, 146);
-                width: 30%;
+                width: 33%;
                 height: fit-content;
                 font-size: 150%;
                 text-align: center;
@@ -186,15 +187,15 @@
             <a href="mobilemenu.html">Menu</a>
         </nav>
         <h2>Introducing ourselves</h2>
-        <p style="font-size: 20px; color: rgb(24, 24, 24); font-family: Nunito, Helvetica, sans-serif;text-align: left;">Welcome! This is the Webpage of Daily Dose of Memes Viber. Try it out, you can't lose anything! The only thing you'll need is <a href="https://www.viber.com/" style="color: rgb(253, 177, 11);">Viber</a>!<br>Now what are you waiting for? Dive into our memes in the memes section, or join our group.</p>
+        <p style="font-size: 22.5px; color: rgb(24, 24, 24); font-family: Nunito, Helvetica, sans-serif;text-align: left;">Welcome! This is the Webpage of Daily Dose of Memes Viber. Try it out, you can't lose anything! The only thing you'll need is <a href="https://www.viber.com/" style="color: rgb(253, 177, 11);">Viber</a>!<br>Now what are you waiting for? Dive into our memes in the memes section, or join our group.</p>
         <p style="font-size: 15px; color: black; font-family: 'Times New Roman', Times, serif; border-bottom: rgb(54, 54, 54)  1px dashed;font-weight: 400;">(We'd appriciate it)</p>
         <h3 style="font-size: 30px; text-align: left;font-size: 5vh;transition: 1s;">Our history</h3>
         <br>
-        <div class="flex">
-            <p id="lol1">The group was created: 18. 10. (October) 2020, Hungary.</p>
-            <p id="lol2">We applied 3 staff members (same day).</p>
-            <p id="lol3">We reached 40 members! (there are 39 members right now): 13. February 2021.</p>
-        </div>
+        <ol class="flex">
+            <p id="lol1">The group was created: <br> 18. 10. 2020, Hungary.</p>
+            <p id="lol2">We applied 3 staff members on the same day.</p>
+            <p id="lol3">We reached 40 members! <br> February 2021.</p>
+        </ol>
         <div style="text-align: left;font-size: 10px;">
             <p id="note" style="text-align: left;">Note:</p>
             <p style="text-align: left;border-bottom: rgb(54, 54, 54) 1px dashed;font-family: Nunito;">You can make us put more content here, by applying to staff or just simply joining <a href="https://invite.viber.com/?g2=AQA5gjSQDYrqcUxO%2FeROvB6CQT4FPbe%2F0%2BEIYhbLgjuKnZH71Y%2FztLJwJml2X3UY" id="link">Daily Dose of Memes</a></p>
