Ok it has to be final
a

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 height: 8vh;
                 text-transform: uppercase;
                 letter-spacing: 5px;
-                font-size: 15px;
-                margin-top: 4vh;
+                font-size: 4vh;
+                margin-top: 3vh;
                 font-weight: bold;
+                transition: 0s;
             }
             nav {
                 background-color: rgb(158, 95, 218);
@@ -53,7 +54,7 @@
                }
             a:hover {
                 color: rgb(31, 27, 66);
-                font-size: 4vh;
+                font-size: 3vh;
             }
             nav > a {
                 display: none;
@@ -91,6 +92,9 @@
                 }
                 p {
                 text-align: center;
+                }
+                #xd {
+                    font-size: 3vh;
                 }
             }
             h3 {
@@ -172,6 +176,12 @@
             #link:hover {
                 font-size: 2vh;
             }
+            #menu {
+                font-size: 2vh;
+                text-align: center;
+                font-weight: 500;
+                font-family: Nunito,cursive;
+            }
         </style>
     </head>
     <body>
@@ -184,7 +194,7 @@
                 <li class="lol"><a href="admins.html">Administrators</a></li>
                 <li class="lol"><a href="aboutthegroup.html">The Community</a></li>
             </ul>
-            <a href="mobilemenu.html">Menu</a>
+            <a href="mobilemenu.html" id="menu">Menu</a>
         </nav>
         <h2>Introducing ourselves</h2>
         <p style="font-size: 22.5px; color: rgb(24, 24, 24); font-family: Nunito, Helvetica, sans-serif;text-align: left;">Welcome! This is the Webpage of Daily Dose of Memes Viber. Try it out, you can't lose anything! The only thing you'll need is <a href="https://www.viber.com/" style="color: rgb(253, 177, 11);">Viber</a>!<br>Now what are you waiting for? Dive into our memes in the memes section, or join our group.</p>
