ok some changes
s

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 letter-spacing: 5px;
                 font-size: 4vh;
                 margin-top: 3vh;
+                margin-bottom: 1vh;
                 font-weight: bold;
                 transition: 0s;
             }
@@ -68,12 +69,7 @@
                 font-size: 5vh;
                 transition: 1s;
             }
-            h3:hover {
-                letter-spacing: 5px;
-            }
-            h2:hover {
-                letter-spacing: 5px;
-            }
+ 
             p {
                 text-align: center;
                 font-family: Arial, Helvetica, sans-serif;
